--- a/themes/tokyo-night/kitty/themes/noctalia.conf
+++ b/themes/tokyo-night/kitty/themes/noctalia.conf
@@ -1,24 +1,26 @@
-color0 #091518
+color0 #0f1416
 color1 #ffb4ab
-color2 #83d2e5
-color3 #8fd5b0
-color4 #6fdba8
-color5 #83d2e5
-color6 #8fd5b0
-color7 #d8e5e8
-color8 #7c959b
+color2 #64d5f1
+color3 #a6cdd9
+color4 #e5b5ff
+color5 #64d5f1
+color6 #a6cdd9
+color7 #dee3e5
+color8 #879397
 color9 #ffb4ab
-color10 #83d2e5
-color11 #8fd5b0
-color12 #6fdba8
-color13 #83d2e5
-color14 #8fd5b0
-color15 #d8e5e8
+color10 #64d5f1
+color11 #a6cdd9
+color12 #e5b5ff
+color13 #64d5f1
+color14 #a6cdd9
+color15 #dee3e5
 
-cursor                #d8e5e8
-cursor_text_color     #091518
-background            #091518
-foreground            #d8e5e8
-selection_foreground  #b2cbd2
-selection_background  #334a50
-url_color             #6fdba8
+cursor                #dee3e5
+cursor_text_color     #0f1416
+background            #0f1416
+foreground            #dee3e5
+selection_foreground  #bdc8cd
+selection_background  #3d494c
+active_border_color   #64d5f1
+inactive_border_color #3d494c
+url_color             #64d5f1
