--- a/themes/tokyo-night/kitty/current-theme.conf
+++ b/themes/tokyo-night/kitty/current-theme.conf
@@ -1,26 +1,26 @@
-color0 #0f1416
+color0 #181211
 color1 #ffb4ab
-color2 #64d5f1
-color3 #a6cdd9
-color4 #e5b5ff
-color5 #64d5f1
-color6 #a6cdd9
-color7 #dee3e5
-color8 #879397
+color2 #ffb4a9
+color3 #e7bdb6
+color4 #dec38c
+color5 #ffb4a9
+color6 #e7bdb6
+color7 #ede0de
+color8 #a08c89
 color9 #ffb4ab
-color10 #64d5f1
-color11 #a6cdd9
-color12 #e5b5ff
-color13 #64d5f1
-color14 #a6cdd9
-color15 #dee3e5
+color10 #ffb4a9
+color11 #e7bdb6
+color12 #dec38c
+color13 #ffb4a9
+color14 #e7bdb6
+color15 #ede0de
 
-cursor                #dee3e5
-cursor_text_color     #0f1416
-background            #0f1416
-foreground            #dee3e5
-selection_foreground  #bdc8cd
-selection_background  #3d494c
-active_border_color   #64d5f1
-inactive_border_color #3d494c
-url_color             #64d5f1
+cursor                #ede0de
+cursor_text_color     #181211
+background            #181211
+foreground            #ede0de
+selection_foreground  #d8c2be
+selection_background  #534341
+active_border_color   #ffb4a9
+inactive_border_color #534341
+url_color             #ffb4a9
