--- a/themes/tokyo-night/starship.toml
+++ b/themes/tokyo-night/starship.toml
@@ -1,23 +1,17 @@
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
-# ████ TOKYO NIGHT - STARSHIP PROMPT CONFIGURATION ████
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
-#
-# Cyberpunk cityscape inspired • Neon glow aesthetics
-# Electric blues • Vibrant purples • Midnight depths
-# Clean typography • Modern interface flows
-#
-# "The night sky glows with electric dreams."
-# "Code flows like neon through digital streets."
+# ─────────────────────────────────────────────────────────
+# NEUTRAL STARSHIP PROMPT CONFIGURATION
+# Greyscale-first • Subtle accents • Universally compatible
+# Designed to blend with any terminal colorscheme
 # ─────────────────────────────────────────────────────────
 
 "$schema" = 'https://starship.rs/config-schema.json'
 
-# ▓▓▓ GLOBAL CONFIGURATION - TOKYO NIGHT SETTINGS ▓▓▓
+# ▓▓▓ GLOBAL CONFIGURATION ▓▓▓
 add_newline = false
 command_timeout = 1000
 scan_timeout = 30
 
-# ▓▓▓ PROMPT FORMAT - NEON READOUT ▓▓▓
+# ▓▓▓ PROMPT FORMAT ▓▓▓
 format = """
 $fill\
 $time\
@@ -30,65 +24,65 @@ right_format = """
 $status\
 $cmd_duration"""
 
-# ▓▓▓ FILL CHARACTER - ELECTRIC SEPARATOR ▓▓▓
+# ▓▓▓ FILL CHARACTER ▓▓▓
 [fill]
 symbol = '─'
-style = '#414868'
+style = 'dimmed white'
 
-# ▓▓▓ SYSTEM TIME - NEON CLOCK ▓▓▓
+# ▓▓▓ SYSTEM TIME ▓▓▓
 [time]
 disabled = false
 format = '[$time]($style)'
-style = 'bold #7dcfff'
+style = 'bold white'
 time_format = '%H:%M:%S'
 utc_time_offset = 'local'
 
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
-# ████████████ COMMAND INTERFACE ████████████
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+# ─────────────────────────────────────────────────────────
+# COMMAND INTERFACE
+# ─────────────────────────────────────────────────────────
 
 [character]
 format = '''
 $symbol '''
-success_symbol = '[❯](bold #7aa2f7)'
-error_symbol = '[❯](bold #f7768e)'
-vimcmd_replace_one_symbol = '[❮](bold #bb9af7)'
-vimcmd_replace_symbol = '[❮](bold #bb9af7)'
-vimcmd_visual_symbol = '[❮](bold #bb9af7)'
+success_symbol = '[❯](bold white)'
+error_symbol = '[❯](bold red)'
+vimcmd_replace_one_symbol = '[❮](bold yellow)'
+vimcmd_replace_symbol = '[❮](bold yellow)'
+vimcmd_visual_symbol = '[❮](bold yellow)'
 
-# ▓▓▓ SYSTEM USER - DIGITAL IDENTITY ▓▓▓
+# ▓▓▓ USER ▓▓▓
 [username]
-style_user = 'bold #c0caf5'
-style_root = 'bold #f7768e'
-format = '[$user]($style)[@](#565f89)'
+style_user = 'bold white'
+style_root = 'bold red'
+format = '[$user]($style)[@](dimmed white)'
 disabled = false
 show_always = true
 
-# ▓▓▓ MACHINE HOSTNAME - SYSTEM NODE ▓▓▓
+# ▓▓▓ HOSTNAME ▓▓▓
 [hostname]
 ssh_only = false
-format = '[$hostname]($style)[∿](#565f89)'
-style = 'bold #7aa2f7'
+format = '[$hostname]($style)[∿](dimmed white)'
+style = 'bold white'
 disabled = false
 
-# ▓▓▓ DIRECTORY PATH - DIGITAL NAVIGATION ▓▓▓
+# ▓▓▓ DIRECTORY ▓▓▓
 [directory]
-style = 'bold #4D7D82'
+style = 'bold white'
 format = ' [$path]($style)[$read_only]($read_only_style)'
 truncation_length = 3
 truncate_to_repo = false
 truncation_symbol = '…/'
 read_only = '[🔒]'
-read_only_style = 'bold #f7768e'
+read_only_style = 'bold red'
 home_symbol = '~'
 use_os_path_sep = true
 
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
-# ████████████ VERSION CONTROL FLOW ████████████
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+# ─────────────────────────────────────────────────────────
+# VERSION CONTROL
+# ─────────────────────────────────────────────────────────
 
 [git_branch]
-style = 'bold #bb9af7'
+style = 'bold white'
 format = ' [$symbol$branch(:$remote_branch)]($style) '
 symbol = ' '
 truncation_length = 25
@@ -97,19 +91,19 @@ only_attached = false
 always_show_remote = false
 
 [git_commit]
-style = 'bold #7dcfff'
+style = 'bold white'
 format = '[◉$hash$tag]($style)'
 commit_hash_length = 7
 tag_symbol = ' 🏷 '
 tag_disabled = false
 only_detached = true
 
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
-# ████████████ SYSTEM DIAGNOSTICS ████████████
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+# ─────────────────────────────────────────────────────────
+# SYSTEM DIAGNOSTICS
+# ─────────────────────────────────────────────────────────
 
 [cmd_duration]
-style = 'bold #ff9e64'
+style = 'bold yellow'
 min_time = 500
 format = '[⏱ $duration]($style)'
 show_milliseconds = true
@@ -117,7 +111,7 @@ show_notifications = false
 min_time_to_notify = 45000
 
 [status]
-style = 'bold #f7768e'
+style = 'bold red'
 symbol = '✘ '
 success_symbol = ''
 not_executable_symbol = '🚫'
@@ -131,18 +125,18 @@ pipestatus = true
 pipestatus_separator = '|'
 
 [jobs]
-style = 'bold #e0af68'
+style = 'bold yellow'
 symbol = '⚙ '
 number_threshold = 1
 symbol_threshold = 1
 format = '[$symbol$number]($style)'
 
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
-# ████████████ DEVELOPMENT ENVIRONMENT ████████████
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+# ─────────────────────────────────────────────────────────
+# DEVELOPMENT ENVIRONMENT
+# ─────────────────────────────────────────────────────────
 
 [nodejs]
-style = 'bold #9ece6a'
+style = 'bold white'
 symbol = ' '
 format = '[$symbol($version)]($style)'
 version_format = 'v${raw}'
@@ -151,13 +145,12 @@ detect_files = ['package.json', '.node-version', '.nvmrc']
 detect_folders = ['node_modules']
 
 [python]
-style = 'bold #7aa2f7'
+style = 'bold white'
 symbol = ' '
 format = '[${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style)'
 version_format = 'v${raw}'
 detect_extensions = ['py']
 detect_files = [
-    '.python-version',
     'Pipfile',
     '__init__.py',
     'pyproject.toml',
@@ -169,7 +162,7 @@ pyenv_version_name = false
 pyenv_prefix = 'pyenv '
 
 [rust]
-style = 'bold #ff9e64'
+style = 'bold white'
 symbol = ' '
 format = '[$symbol($version)]($style)'
 version_format = 'v${raw}'
@@ -177,7 +170,7 @@ detect_extensions = ['rs']
 detect_files = ['Cargo.toml']
 
 [golang]
-style = 'bold #7dcfff'
+style = 'bold white'
 symbol = ' '
 format = '[$symbol($version)]($style)'
 version_format = 'v${raw}'
@@ -189,7 +182,7 @@ detect_files = [
 detect_folders = []
 
 [docker_context]
-style = 'bold #bb9af7'
+style = 'bold white'
 symbol = ' '
 format = '[$symbol$context]($style)'
 only_with_files = true
@@ -198,7 +191,7 @@ detect_files = ['docker-compose.yml', 'docker-compose.yaml', 'Dockerfile']
 detect_folders = []
 
 [kubernetes]
-style = 'bold #7dcfff'
+style = 'bold white'
 symbol = '☸ '
 format = '[$symbol$context( \($namespace\))]($style)'
 disabled = false
@@ -206,56 +199,21 @@ detect_extensions = []
 detect_files = []
 detect_folders = []
 
-# ▓▓▓ CLOUD & INFRASTRUCTURE ▓▓▓
-[aws]
-style = 'bold #ff9e64'
-symbol = ' '
-format = '[$symbol($profile)(\($region\))(\[$duration\])]($style)'
-
-[azure]
-style = 'bold #7aa2f7'
-symbol = '󰠅 '
-format = '[$symbol($subscription)]($style)'
-
-[gcloud]
-style = 'bold #9ece6a'
-symbol = '󱇶 '
-format = '[$symbol$account(@$domain)(\($region\))]($style)'
-
-# ▓▓▓ PACKAGE MANAGERS ▓▓▓
-[package]
-style = 'bold #e0af68'
-symbol = '📦 '
-format = '[$symbol$version]($style)'
-
-# ▓▓▓ SYSTEM INFORMATION ▓▓▓
-[memory_usage]
-disabled = false
-threshold = 75
-style = 'bold #f7768e'
-symbol = '🧠 '
-format = '[$symbol${ram}( | ${swap})]($style)'
-
 [battery]
 format = '[$symbol$percentage]($style)'
 [[battery.display]]
 threshold = 20
-style = 'bold #f7768e'
+style = 'bold red'
 [[battery.display]]
 threshold = 50
-style = 'bold #e0af68'
+style = 'bold yellow'
 [[battery.display]]
 threshold = 100
-style = 'bold #9ece6a'
+style = 'bold white'
 
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
-# ████████████ DISABLED MODULES ████████████
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
-
+# ─────────────────────────────────────────────────────────
 [line_break]
 disabled = false
-
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
-# END TOKYO NIGHT CONFIGURATION
-# Neon prompt configured. Digital streets illuminated.
-# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+# ─────────────────────────────────────────────────────────
+# END — neutral prompt, ready for any colorscheme
+# ─────────────────────────────────────────────────────────
