--- a/general/zed/settings.json
+++ b/general/zed/settings.json
@@ -1,13 +1,13 @@
 {
   "edit_predictions": {
+    "provider": "copilot",
     "disabled_globs": ["*.env*"],
-  },
-  "features": {
-    "edit_prediction_provider": "copilot",
   },
   "icon_theme": "Colored Zed Icons Theme Dark",
   "agent": {
-    "always_allow_tool_actions": true,
+    "tool_permissions": {
+      "default": "allow",
+    },
     "default_profile": "write",
     "default_model": {
       "provider": "copilot_chat",
@@ -25,7 +25,7 @@
   "theme": {
     "mode": "dark",
     "light": "Tokyo Night",
-    "dark": "Tokyo Night",
+    "dark": "Noctalia Dark",
   },
   "lsp": {
     "rust-analyzer": {
