Remove theme files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 plugins/
+
+general/zed/themes/noctalia.json
+themes/tokyo-night/kitty/current-theme.conf
+themes/tokyo-night/kitty/themes/noctalia.conf
+themes/tokyo-night/niri/noctalia.kdl
+themes/tokyo-night/noctalia/colors.json
