--- a/themes/tokyo-night/noctalia/settings.json
+++ b/themes/tokyo-night/noctalia/settings.json
@@ -639,6 +639,10 @@
             {
                 "enabled": true,
                 "id": "zed"
+            },
+            {
+                "enabled": true,
+                "id": "spicetify"
             }
         ],
         "enableUserTheming": false
