--- a/themes/tokyo-night/noctalia/settings.json
+++ b/themes/tokyo-night/noctalia/settings.json
@@ -642,7 +642,11 @@
             },
             {
                 "enabled": true,
-                "id": "spicetify"
+                "id": "btop"
+            },
+            {
+                "enabled": true,
+                "id": "fuzzel"
             }
         ],
         "enableUserTheming": false
