--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ themes/tokyo-night/kitty/current-theme.conf
 themes/tokyo-night/kitty/themes/noctalia.conf
 themes/tokyo-night/niri/noctalia.kdl
 themes/tokyo-night/noctalia/colors.json
+themes/tokyo-night/fuzzel/themes/noctalia
